[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
redis = { version = "0.23.0", features = ["tokio-comp"] }
redis-macros = "0.1.0"
serde_json = "1.0.97"
serde = { version = "1.0.164", features = ["derive"] }
my-ws= { path = "../../my-ws" }

tokio-tungstenite = "0.19.0"
futures-channel = "0.3.28"
futures-util = "0.3.28"
